Bug 96855 - LO51RC1 Online help content selection no longer offers help for "LibreOffice Basic"
Summary: LO51RC1 Online help content selection no longer offers help for "LibreOffice ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Documentation (show other bugs)
Version:
(earliest affected)
5.1.0.1 rc
Hardware: All All
: medium major
Assignee: Stephan Bergmann
URL:
Whiteboard: target:5.2.0 target:5.1.0.2 target:5...
Keywords: bisected, regression
: 96746 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-01-02 00:08 UTC by Martin Srebotnjak
Modified: 2016-10-25 19:11 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Drop-down selection of help subcontent (67.03 KB, image/png)
2016-01-02 00:08 UTC, Martin Srebotnjak
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Srebotnjak 2016-01-02 00:08:34 UTC
Created attachment 121675 [details]
Drop-down selection of help subcontent

Wanted to test if bug I reported
https://bugs.documentfoundation.org/show_bug.cgi?id=91992
is still happening with 51RC! and I wanted to test the same help page, the GoTo Command from LibreOffice Basic help.

But upon opening the help window on OSX I just cannot select LibreOffice Basic help, it does no exist anymore. Also, no other help section offers definition for the GoTo (or probably other Basic commands), so it seems that LibreOffice Basic help content somehow vanished from online help.

I am attaching the drop-down menu content where there is no "LibreOffice Basic" item present.
Comment 1 Martin Srebotnjak 2016-01-02 00:09:43 UTC
Oh, I am using OSX 10.11.2 and LO51RC1 with Slovenian lang-pack.
Comment 2 Andras Timar 2016-01-02 10:14:50 UTC
SfxContentHelper::GetResultSet() call does not return the item for LibreOffice Basic.
Comment 3 Andras Timar 2016-01-03 13:00:42 UTC
Bisecting showed that this bug was an interesting side effect of another bug fix. 
 6948c546fdc00dddec7d58e03150dcc87921d6b2 is the first bad commit
commit 6948c546fdc00dddec7d58e03150dcc87921d6b2
Author: Stephan Bergmann <sbergman@redhat.com>
Date:   Mon Oct 26 17:55:14 2015 +0100

    tdf#75637: Resolve help images via a vnd.libreoffice.image UCP
Comment 4 Commit Notification 2016-01-04 14:18:25 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=549e900b4b0047b8cb6c236ea50a3fc046e5fb51

tdf#96855: Put back assignment of xHierAccess

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Stephan Bergmann 2016-01-04 14:36:02 UTC
requested backporting to libreoffice-5-1 towards LO 5.1.0 at <https://gerrit.libreoffice.org/21081> and to libreoffice-5-0 towards LO 5.0.5 at <https://gerrit.libreoffice.org/21082>
Comment 6 Commit Notification 2016-01-04 20:05:50 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f284ec139beb920486e8351f9e758966969349ab&h=libreoffice-5-1

tdf#96855: Put back assignment of xHierAccess

It will be available in 5.1.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2016-01-04 20:05:55 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e4a154790397428f2e2f5bcdf26de407d6b0e2da&h=libreoffice-5-0

tdf#96855: Put back assignment of xHierAccess

It will be available in 5.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Maxim Monastirsky 2016-01-06 19:31:29 UTC
*** Bug 96746 has been marked as a duplicate of this bug. ***
Comment 9 tim 2016-01-23 17:50:22 UTC
Works for me - ubuntu 14.04 64 bit LO 5.1.0.2.

Many thanks.