tdf#96855: Put back assignment of xHierAccess

...that had inadvertently been removed as part of a larger code removal in
6948c546fdc00dddec7d58e03150dcc87921d6b2 "tdf#75637: Resolve help images via a
vnd.libreoffice.image UCP"

Change-Id: Ic2d5e1a5fa5a10b240bb9e511e6dcb8097e58081
(cherry picked from commit 549e900b4b0047b8cb6c236ea50a3fc046e5fb51)
Reviewed-on: https://gerrit.libreoffice.org/21081
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>